--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "type": "module",
   "bin": {
-    "6digit-mcp": "./build/index.js"
+    "6digit-mcp": "./dist/index.js"
   },
   "scripts": {
     "build": "tsc",
