--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
   "name": "6digit-mcp",
-  "version": "0.1.0",
-  "description": "A Model Context Protocol server for 6digit studio",
-  "private": true,
+  "version": "1.0.0",
+  "main": "src/index.js",
   "type": "module",
-  "bin": {
-    "6digit-mcp": "./dist/index.js"
-  },
   "scripts": {
-    "build": "tsc",
-    "prepare": "npm run build",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
-    "lint": "eslint src/**/*.ts",
-    "format": "prettier --write src/**/*.ts"
+    "start": "node src/index.js",
+    "dev": "node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "A simple MCP (Model Context Protocol) server implementation",
+  "devDependencies": {
+    "@types/node": "^22.13.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.6.1",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.24",
-    "typescript": "^5.3.3"
+    "@modelcontextprotocol/sdk": "^1.6.1"
   }
 }
