--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "main": "build/index.js",
   "type": "module",
+  "bin": {
+    "6digit-mcp": "build/index.js"
+  },
   "scripts": {
     "start": "node build/index.js",
-    "dev": "ts-node-esm src/index.ts",
+    "dev": "ts-node --esm src/index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
