--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node build/index.js",
-    "dev": "NODE_OPTIONS=\"--loader ts-node/esm\" node src/index.ts",
+    "dev": "NODE_OPTIONS=\"--loader ts-node/esm\" node src/index.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
